unpackaged/main/default/objects/Affected_Product__c/Affected_Product__c.object-meta.xml
<CustomObject>
    <label>Affected Products</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Affected Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>