unpackaged/main/default/objects/Affected_Product__c/fields/Manufacture_Date__c.field-meta.xml
<CustomField>
        <fullName>Manufacture_Date__c</fullName>
        <label>Manufacture Date</label>
        <type>Date</type>
    </CustomField>