unpackaged/main/default/objects/Affected_Product__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipName>Affected_Product</relationshipName>
        <type>Lookup</type>
    </CustomField>