unpackaged/main/default/objects/Affected_Product__c/fields/Quality_Event__c.field-meta.xml
<CustomField>
        <fullName>Quality_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Event</label>
        <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
        <relationshipName>Affected_Product</relationshipName>
        <type>Lookup</type>
    </CustomField>